# JustDownIt

./: .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml  readme.md  requirements-test.txt  requirements.txt  theme.py  threads.py  ui_mainwindow.py  ytdown.py  ytdown_core.py  ytdown_gui.py
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml
app/: main.py
app/core/: download.py  paths.py  threads.py  thumbnails.py  ytclient.py  ytdown_core.py
app/ui/: theme.py  ui_mainwindow.py  ui_playlist.py
app/utils/: errors.py  filename.py  url.py
app/workers/: download_worker.py  format_worker.py  playlist_fetch_worker.py  playlist_formats_worker.py
tests/: conftest.py
tests/app/: test_main.py
tests/app/core/: __init__.py  test_download.py  test_paths.py  test_thumbnails.py  test_ytclient.py
tests/app/ui/: __init__.py  test_theme.py
tests/app/utils/: test_errors.py  test_filename.py  test_url.py
tests/app/workers/: test_download_worker.py  test_format_worker.py  test_playlist_fetch_worker.py  test_playlist_formats_worker.py
tests/integration/: __init__.py  test_integration_download.py
